src/renderer/src/parser/scheduleParser.ts
// Generated from schedule.g4 by ANTLR 4.13.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import scheduleListener from "./scheduleListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class scheduleParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly ID = 36;
	public static readonly ALPHANUM = 37;
	public static readonly DIGIT = 38;
	public static readonly WS = 39;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_builtInFunction = 2;
	public static readonly RULE_assignment = 3;
	public static readonly RULE_arrayAssignment = 4;
	public static readonly RULE_functionCall = 5;
	public static readonly RULE_arguments = 6;
	public static readonly RULE_argument = 7;
	public static readonly RULE_functionDeclaration = 8;
	public static readonly RULE_parameters = 9;
	public static readonly RULE_parameter = 10;
	public static readonly RULE_typeName = 11;
	public static readonly RULE_arrayType = 12;
	public static readonly RULE_value = 13;
	public static readonly RULE_arrayValue = 14;
	public static readonly RULE_stringLiteral = 15;
	public static readonly RULE_dateLiteral = 16;
	public static readonly RULE_timeLiteral = 17;
	public static readonly RULE_dayLiteral = 18;
	public static readonly RULE_time = 19;
	public static readonly RULE_timeRange = 20;
	public static readonly RULE_task = 21;
	public static readonly RULE_createFunction = 22;
	public static readonly RULE_removeFunction = 23;
	public static readonly RULE_updateFunction = 24;
	public static readonly RULE_deleteFunction = 25;
	public static readonly RULE_selectFunction = 26;
	public static readonly RULE_printFunction = 27;
	public static readonly literalNames: (string | null)[] = [ null, "'='", 
                                                            "';'", "'('", 
                                                            "')'", "','", 
                                                            "'{'", "'}'", 
                                                            "'string'", 
                                                            "'date'", "'day'", 
                                                            "'time'", "'task'", 
                                                            "'[]'", "'['", 
                                                            "']'", "'\"'", 
                                                            "'\\r'", "'\\n'", 
                                                            "'\\'", "'/'", 
                                                            "':'", "'Mon'", 
                                                            "'Tue'", "'Wed'", 
                                                            "'Thur'", "'Fri'", 
                                                            "'Sat'", "'Sun'", 
                                                            "'-'", "'create'", 
                                                            "'remove'", 
                                                            "'update'", 
                                                            "'delete'", 
                                                            "'select'", 
                                                            "'print'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "ID", "ALPHANUM", 
                                                             "DIGIT", "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "builtInFunction", "assignment", "arrayAssignment", 
		"functionCall", "arguments", "argument", "functionDeclaration", "parameters", 
		"parameter", "typeName", "arrayType", "value", "arrayValue", "stringLiteral", 
		"dateLiteral", "timeLiteral", "dayLiteral", "time", "timeRange", "task", 
		"createFunction", "removeFunction", "updateFunction", "deleteFunction", 
		"selectFunction", "printFunction",
	];
	public get grammarFileName(): string { return "schedule.g4"; }
	public get literalNames(): (string | null)[] { return scheduleParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return scheduleParser.symbolicNames; }
	public get ruleNames(): string[] { return scheduleParser.ruleNames; }
	public get serializedATN(): number[] { return scheduleParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, scheduleParser._ATN, scheduleParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, scheduleParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 56;
				this.statement();
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & 532676639) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, scheduleParser.RULE_statement);
		try {
			this.state = 66;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 61;
				this.assignment();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 62;
				this.arrayAssignment();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 63;
				this.functionCall();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 64;
				this.functionDeclaration();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 65;
				this.builtInFunction();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public builtInFunction(): BuiltInFunctionContext {
		let localctx: BuiltInFunctionContext = new BuiltInFunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, scheduleParser.RULE_builtInFunction);
		try {
			this.state = 74;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 30:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 68;
				this.createFunction();
				}
				break;
			case 31:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 69;
				this.removeFunction();
				}
				break;
			case 32:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 70;
				this.updateFunction();
				}
				break;
			case 33:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 71;
				this.deleteFunction();
				}
				break;
			case 34:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 72;
				this.selectFunction();
				}
				break;
			case 35:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 73;
				this.printFunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let localctx: AssignmentContext = new AssignmentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, scheduleParser.RULE_assignment);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 76;
			this.typeName();
			this.state = 77;
			this.match(scheduleParser.ID);
			this.state = 78;
			this.match(scheduleParser.T__0);
			this.state = 79;
			this.value();
			this.state = 80;
			this.match(scheduleParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayAssignment(): ArrayAssignmentContext {
		let localctx: ArrayAssignmentContext = new ArrayAssignmentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, scheduleParser.RULE_arrayAssignment);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 82;
			this.arrayType();
			this.state = 83;
			this.match(scheduleParser.ID);
			this.state = 84;
			this.match(scheduleParser.T__0);
			this.state = 85;
			this.arrayValue();
			this.state = 86;
			this.match(scheduleParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let localctx: FunctionCallContext = new FunctionCallContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, scheduleParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this.match(scheduleParser.ID);
			this.state = 89;
			this.match(scheduleParser.T__2);
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 16809733) !== 0)) {
				{
				this.state = 90;
				this.arguments();
				}
			}

			this.state = 93;
			this.match(scheduleParser.T__3);
			this.state = 94;
			this.match(scheduleParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arguments(): ArgumentsContext {
		let localctx: ArgumentsContext = new ArgumentsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, scheduleParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 96;
			this.argument();
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 97;
				this.match(scheduleParser.T__4);
				this.state = 98;
				this.argument();
				}
				}
				this.state = 103;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let localctx: ArgumentContext = new ArgumentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, scheduleParser.RULE_argument);
		try {
			this.state = 106;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 16:
			case 22:
			case 23:
			case 24:
			case 25:
			case 26:
			case 27:
			case 28:
			case 38:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 104;
				this.value();
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 105;
				this.arrayValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, scheduleParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 108;
			this.typeName();
			this.state = 109;
			this.match(scheduleParser.ID);
			this.state = 110;
			this.match(scheduleParser.T__2);
			this.state = 112;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0)) {
				{
				this.state = 111;
				this.parameters();
				}
			}

			this.state = 114;
			this.match(scheduleParser.T__3);
			this.state = 115;
			this.match(scheduleParser.T__5);
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 116;
				this.statement();
				}
				}
				this.state = 119;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & 532676639) !== 0));
			this.state = 121;
			this.match(scheduleParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameters(): ParametersContext {
		let localctx: ParametersContext = new ParametersContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, scheduleParser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 123;
			this.parameter();
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 124;
				this.match(scheduleParser.T__4);
				this.state = 125;
				this.parameter();
				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameter(): ParameterContext {
		let localctx: ParameterContext = new ParameterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, scheduleParser.RULE_parameter);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 131;
			this.typeName();
			this.state = 132;
			this.match(scheduleParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeName(): TypeNameContext {
		let localctx: TypeNameContext = new TypeNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, scheduleParser.RULE_typeName);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 134;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 7936) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayType(): ArrayTypeContext {
		let localctx: ArrayTypeContext = new ArrayTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, scheduleParser.RULE_arrayType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.typeName();
			this.state = 137;
			this.match(scheduleParser.T__12);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let localctx: ValueContext = new ValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, scheduleParser.RULE_value);
		try {
			this.state = 144;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 139;
				this.task();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 140;
				this.dateLiteral();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 141;
				this.dayLiteral();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 142;
				this.timeLiteral();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 143;
				this.stringLiteral();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayValue(): ArrayValueContext {
		let localctx: ArrayValueContext = new ArrayValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, scheduleParser.RULE_arrayValue);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 146;
			this.match(scheduleParser.T__13);
			this.state = 155;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 16)) & ~0x1F) === 0 && ((1 << (_la - 16)) & 4202433) !== 0)) {
				{
				this.state = 147;
				this.value();
				this.state = 152;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===5) {
					{
					{
					this.state = 148;
					this.match(scheduleParser.T__4);
					this.state = 149;
					this.value();
					}
					}
					this.state = 154;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 157;
			this.match(scheduleParser.T__14);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stringLiteral(): StringLiteralContext {
		let localctx: StringLiteralContext = new StringLiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, scheduleParser.RULE_stringLiteral);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 159;
			this.match(scheduleParser.T__15);
			this.state = 165;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4294508542) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 255) !== 0)) {
				{
				this.state = 163;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 1:
				case 2:
				case 3:
				case 4:
				case 5:
				case 6:
				case 7:
				case 8:
				case 9:
				case 10:
				case 11:
				case 12:
				case 13:
				case 14:
				case 15:
				case 20:
				case 21:
				case 22:
				case 23:
				case 24:
				case 25:
				case 26:
				case 27:
				case 28:
				case 29:
				case 30:
				case 31:
				case 32:
				case 33:
				case 34:
				case 35:
				case 36:
				case 37:
				case 38:
				case 39:
					{
					this.state = 160;
					_la = this._input.LA(1);
					if(_la<=0 || (((_la) & ~0x1F) === 0 && ((1 << _la) & 983040) !== 0)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					break;
				case 19:
					{
					this.state = 161;
					this.match(scheduleParser.T__18);
					this.state = 162;
					this.matchWildcard();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 168;
			this.match(scheduleParser.T__15);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dateLiteral(): DateLiteralContext {
		let localctx: DateLiteralContext = new DateLiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, scheduleParser.RULE_dateLiteral);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 170;
			this.match(scheduleParser.DIGIT);
			this.state = 171;
			this.match(scheduleParser.DIGIT);
			this.state = 172;
			this.match(scheduleParser.DIGIT);
			this.state = 173;
			this.match(scheduleParser.DIGIT);
			this.state = 174;
			this.match(scheduleParser.T__19);
			this.state = 175;
			this.match(scheduleParser.DIGIT);
			this.state = 176;
			this.match(scheduleParser.DIGIT);
			this.state = 177;
			this.match(scheduleParser.T__19);
			this.state = 178;
			this.match(scheduleParser.DIGIT);
			this.state = 179;
			this.match(scheduleParser.DIGIT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public timeLiteral(): TimeLiteralContext {
		let localctx: TimeLiteralContext = new TimeLiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, scheduleParser.RULE_timeLiteral);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 181;
			this.match(scheduleParser.DIGIT);
			this.state = 182;
			this.match(scheduleParser.DIGIT);
			this.state = 183;
			this.match(scheduleParser.T__20);
			this.state = 184;
			this.match(scheduleParser.DIGIT);
			this.state = 185;
			this.match(scheduleParser.DIGIT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public dayLiteral(): DayLiteralContext {
		let localctx: DayLiteralContext = new DayLiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, scheduleParser.RULE_dayLiteral);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 187;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 532676608) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public time(): TimeContext {
		let localctx: TimeContext = new TimeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, scheduleParser.RULE_time);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 189;
			this.match(scheduleParser.DIGIT);
			this.state = 190;
			this.match(scheduleParser.DIGIT);
			this.state = 191;
			this.match(scheduleParser.T__20);
			this.state = 192;
			this.match(scheduleParser.DIGIT);
			this.state = 193;
			this.match(scheduleParser.DIGIT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public timeRange(): TimeRangeContext {
		let localctx: TimeRangeContext = new TimeRangeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, scheduleParser.RULE_timeRange);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 195;
			this.time();
			this.state = 196;
			this.match(scheduleParser.T__28);
			this.state = 197;
			this.time();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public task(): TaskContext {
		let localctx: TaskContext = new TaskContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, scheduleParser.RULE_task);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 199;
			this.time();
			this.state = 200;
			this.stringLiteral();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createFunction(): CreateFunctionContext {
		let localctx: CreateFunctionContext = new CreateFunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 44, scheduleParser.RULE_createFunction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 202;
			this.match(scheduleParser.T__29);
			this.state = 203;
			this.match(scheduleParser.T__2);
			this.state = 204;
			this.arrayValue();
			this.state = 205;
			this.match(scheduleParser.T__3);
			this.state = 206;
			this.match(scheduleParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public removeFunction(): RemoveFunctionContext {
		let localctx: RemoveFunctionContext = new RemoveFunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 46, scheduleParser.RULE_removeFunction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 208;
			this.match(scheduleParser.T__30);
			this.state = 209;
			this.match(scheduleParser.T__2);
			this.state = 210;
			this.arrayValue();
			this.state = 211;
			this.match(scheduleParser.T__3);
			this.state = 212;
			this.match(scheduleParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public updateFunction(): UpdateFunctionContext {
		let localctx: UpdateFunctionContext = new UpdateFunctionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 48, scheduleParser.RULE_updateFunction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 214;
			this.match(scheduleParser.T__31);
			this.state = 215;
			this.match(scheduleParser.T__2);
			this.state = 216;
			this.arrayValue();
			this.state = 217;
			this.match(scheduleParser.T__4);
			this.state = 218;
			this.stringLiteral();
			this.state = 219;
			this.match(scheduleParser.T__4);
			this.state = 220;
			this.value();
			this.state = 221;
			this.match(scheduleParser.T__3);
			this.state = 222;
			this.match(scheduleParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
